Fixed line break on ATC

--- a/assets/tailwind-compiled.css
+++ b/assets/tailwind-compiled.css
@@ -957,6 +957,11 @@
     row-gap: 16px
 }
 
+.gap-x-2 {
+    -moz-column-gap: 8px;
+         column-gap: 8px
+}
+
 .space-y-1 > :not([hidden]) ~ :not([hidden]) {
     --tw-space-y-reverse: 0;
     margin-top: calc(4px * calc(1 - var(--tw-space-y-reverse)));
@@ -1535,6 +1540,10 @@
 
 .p-\[7px\] {
     padding: 7px
+}
+
+.\!p-3 {
+    padding: 12px !important
 }
 
 .\!py-4 {
